--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BOOKS</title>
+    <meta
+      name="description"
+      content="We specialize in diagnosing and repairing all electrical problems in your car, from simple fixes to complex issues. We use the latest tools and technology to get you back on the road quickly and safely."
+    />
+    <title>Electrify Auto Care</title>
   </head>
   <body>
     <div id="root"></div>
